--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,11 @@ plugins {
 android {
     compileSdk 32
 
+    buildFeatures{
+        viewBinding = true
+
+    }
+
     defaultConfig {
         applicationId "br.com.mobile.tardamasnaofalha"
         minSdk 21
