--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/Theme.TardaMasNaoFalha"
         tools:targetApi="31">
         <activity
+            android:theme="@style/AppTheme.toolbar"
             android:name=".TelaInicialActivity"
             android:exported="false" />
         <activity
